[gd_scene load_steps=11 format=3 uid="uid://bk47xm18eapl3"]

[ext_resource type="Texture2D" uid="uid://ddlgmthbhq10i" path="res://art/temp_bkgnd.png" id="1_p7wa8"]
[ext_resource type="Script" path="res://scenes/controls_info.gd" id="2_4ry8n"]
[ext_resource type="Texture2D" uid="uid://buij1vv5q652e" path="res://art/temp_button_bkgnd.png" id="3_xhmiv"]
[ext_resource type="Texture2D" uid="uid://2tf23y4l4fjd" path="res://art/disabled_button.png" id="6_5bmj5"]
[ext_resource type="SpriteFrames" uid="uid://buswbbf3dlopx" path="res://Sprite/Cell.tres" id="7_madn8"]
[ext_resource type="Texture2D" uid="uid://bhdeol5mcbf01" path="res://art/exit.png" id="7_t7lyq"]
[ext_resource type="Texture2D" uid="uid://dcunn71mak0qd" path="res://art/pressed_exit.png" id="8_ex46c"]

[sub_resource type="Theme" id="Theme_h7hwf"]

[sub_resource type="InputEventKey" id="InputEventKey_r5fhj"]
device = -1
keycode = 88
unicode = 120

[sub_resource type="Shortcut" id="Shortcut_juuud"]
events = [SubResource("InputEventKey_r5fhj")]

[node name="controls" type="TextureRect"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_p7wa8")
expand_mode = 2
script = ExtResource("2_4ry8n")
metadata/_edit_lock_ = true

[node name="title_block" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.025
anchor_top = 0.05
anchor_right = 0.975
anchor_bottom = 0.25
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_xhmiv")
expand_mode = 2
metadata/_edit_lock_ = true

[node name="rich_text" type="RichTextLabel" parent="title_block"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center][font_size=94]Controls[/font_size][/center]"
scroll_active = false

[node name="resource_display" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.35
anchor_right = 0.1
anchor_bottom = 0.35
offset_right = 200.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_xhmiv")
expand_mode = 2

[node name="rich_text" type="RichTextLabel" parent="resource_display"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center][font_size=30]Move[/font_size][/center]"

[node name="upgrade_grid" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.5
anchor_right = 0.1
anchor_bottom = 0.5
offset_right = 200.0
offset_bottom = 100.0
theme = SubResource("Theme_h7hwf")
columns = 3

[node name="TextureRect" type="TextureRect" parent="upgrade_grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect2" type="TextureRect" parent="upgrade_grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("6_5bmj5")

[node name="rich_text" type="RichTextLabel" parent="upgrade_grid/TextureRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center][color=black][font_size=30]W[/font_size][/color][/center]"

[node name="TextureRect3" type="TextureRect" parent="upgrade_grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect4" type="TextureRect" parent="upgrade_grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("6_5bmj5")

[node name="rich_text" type="RichTextLabel" parent="upgrade_grid/TextureRect4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center][color=black][font_size=30]A[/font_size][/color][/center]"

[node name="TextureRect5" type="TextureRect" parent="upgrade_grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("6_5bmj5")

[node name="rich_text" type="RichTextLabel" parent="upgrade_grid/TextureRect5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center][color=black][font_size=30]S[/font_size][/color][/center]"

[node name="TextureRect6" type="TextureRect" parent="upgrade_grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("6_5bmj5")

[node name="rich_text" type="RichTextLabel" parent="upgrade_grid/TextureRect6"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center][color=black][font_size=30]D[/font_size][/color][/center]"

[node name="exit_cont" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.9
anchor_top = 0.9
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2
alignment_horizontal = 2
alignment_vertical = 2

[node name="exit_button" type="TextureButton" parent="exit_cont"]
layout_mode = 2
shortcut = SubResource("Shortcut_juuud")
texture_normal = ExtResource("7_t7lyq")
texture_pressed = ExtResource("8_ex46c")

[node name="resource_display2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.7
anchor_right = 0.1
anchor_bottom = 0.7
offset_right = 400.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_xhmiv")
expand_mode = 2

[node name="rich_text" type="RichTextLabel" parent="resource_display2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center][font_size=30]Split your Cell[/font_size][/center]"

[node name="resource_display3" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.8
anchor_right = 0.1
anchor_bottom = 0.8
offset_right = 400.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_5bmj5")
expand_mode = 2

[node name="rich_text" type="RichTextLabel" parent="resource_display3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center][color=black][font_size=30]Space Bar[/font_size][/color][/center]"

[node name="resource_display4" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.35
anchor_right = 0.5
anchor_bottom = 0.35
offset_right = 400.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_xhmiv")
expand_mode = 2

[node name="rich_text" type="RichTextLabel" parent="resource_display4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center][font_size=30]Your Cell[/font_size][/center]"

[node name="resource_display5" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.7
anchor_right = 0.5
anchor_bottom = 0.7
offset_right = 400.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_xhmiv")
expand_mode = 2

[node name="rich_text" type="RichTextLabel" parent="resource_display5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center][font_size=30]Other Cells[/font_size][/center]"

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.65
anchor_top = 0.5
anchor_right = 0.65
anchor_bottom = 0.5

[node name="CellAnimation" type="AnimatedSprite2D" parent="PanelContainer"]
scale = Vector2(2, 2)
sprite_frames = ExtResource("7_madn8")
animation = &"wiggle"
frame_progress = 0.103928
centered = false

[node name="PanelContainer2" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.55
anchor_top = 0.8
anchor_right = 0.55
anchor_bottom = 0.8

[node name="CellAnimation" type="AnimatedSprite2D" parent="PanelContainer2"]
scale = Vector2(2, 2)
sprite_frames = ExtResource("7_madn8")
animation = &"wiggle"
frame_progress = 0.103928
centered = false

[node name="PanelContainer3" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.65
anchor_top = 0.8
anchor_right = 0.65
anchor_bottom = 0.8

[node name="CellAnimation" type="AnimatedSprite2D" parent="PanelContainer3"]
scale = Vector2(2, 2)
sprite_frames = ExtResource("7_madn8")
animation = &"wiggle"
frame_progress = 0.103928
centered = false

[node name="PanelContainer4" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.75
anchor_top = 0.8
anchor_right = 0.75
anchor_bottom = 0.8

[node name="CellAnimation" type="AnimatedSprite2D" parent="PanelContainer4"]
scale = Vector2(2, 2)
sprite_frames = ExtResource("7_madn8")
animation = &"wiggle"
frame_progress = 0.103928
centered = false
